--- a/src/config/dark-sites.config
+++ b/src/config/dark-sites.config
@@ -952,6 +952,7 @@ totalwarwarhammer.gamepedia.com
 tracker.fumik0.com
 tracker.gg
 tracr.co
+tractionzone.co.uk
 training.azeria-labs.com
 trblwlf.tk
 trilon.io
